--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div>
-        <img src="img/03_two_girls _bridge.png" alt="Friends will be friends">
+        <img src="img/03_two_girls_bridge.png" alt="Friends will be friends">
         <p>Lifestyle</p>
 
 
@@ -67,7 +67,7 @@
     </div>
 
     <div>
-        <img src="img/04_man_in_hat _mountain.png" alt="Over the hills and far avay">
+        <img src="img/04_man_in_hat_mountain.png" alt="Over the hills and far avay">
         <p>Lifestyle</p>
 
 
